AC_INIT([libunstable], 0.1, [benatto@gmail.com])
AC_PREREQ([2.68])
AC_COPYRIGHT(GNU General Public License)

dnl need libtool for libunstable
LT_INIT  
AC_CONFIG_SRCDIR([src/unstable.c])
AM_INIT_AUTOMAKE
AM_PROG_AS
AC_PROG_CC
AC_CONFIG_FILES([Makefile \
                 src/Makefile \
                 examples/Makefile])
AC_OUTPUT
